--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 
 
-<body background="index_pliki/maxresdefault.png"><div class="root"><div class="vbox wb_container" id="wb_header">
-<<audio id="muza" src="music.mp3" autoplay="" loop="">
+<body background="index_pliki/maxresdefault.jpg"><div class="root"><div class="vbox wb_container" id="wb_header">
+<audio id="muza" src="index_pliki/music.mp3" autoplay="" loop="">
 <div id="wb_element_instance0" class="wb_element" style=" line-height: normal;"><h5 class="wb-stl-subtitle">xXxbogus420xXx.prv.pl</h5>
 </div><div id="wb_element_instance1" class="wb_element"><div></div></div></div>
 <div class="vbox wb_container" id="wb_main">
