ostatnie poprawki na dzis
usuniecie zbugowanego odtwarzacza

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-<audio id="muza" src="index_pliki/music.mp3" autoplay="" loop=""></audio>
 <style>
 body {
         background-image: url("default.jpg");
 } 
+ 
+</style></head>
 
-</style>
-</head>
 
 <body>
 <div class="root"><div class="vbox wb_container" id="wb_header">
+<audio id="muza" src="index_pliki/music.mp3" autoplay="autoplay" loop=""></audio>
 <div id="wb_element_instance0" class="wb_element" style=" line-height: normal;"><h5 class="wb-stl-subtitle">xXxbogus420xXx.prv.pl</h5>
 </div><div id="wb_element_instance1" class="wb_element"><div></div></div></div>
 <div class="vbox wb_container" id="wb_main">
@@ -78,7 +78,7 @@ body {
 <p class="wb-stl-normal">Skype: galaxyfighterpl</p>
 
 <p class="wb-stl-normal">E-mail: marcin456544@wp.pl</p>
-</div><div id="wb_element_instance37" class="wb_element"><div></div></div><div id="wb_element_instance38" class="wb_element"><script type="text/javascript" src="index_pliki/audio.js"></script><script type="text/javascript" src="index_pliki/MusicPlayer.js"></script><script type="text/javascript"> WBMusicPlayer.create(document.getElementById('wb_element_instance38'), {autoplay: true}).addAllItems(["gallery\/cypis - impra jest tu.mp3"]); </script><div class="wb-music-player"><div class="wb-music-player-ctrl" id="audiojs_wrapper0"><audio preload="" src="index_pliki/cypis%2520-%2520impra%2520jest%2520tu.mp3"></audio><div class="wb-music-player-btns"><a class="wb-music-player-prev disabled" href="javascript:void(0)"><span class="glyphicon glyphicon-step-backward"></span></a><a class="wb-music-player-play" href="javascript:void(0)"><span class="glyphicon glyphicon-pause"></span></a><a class="wb-music-player-next disabled" href="javascript:void(0)"><span class="glyphicon glyphicon-step-forward"></span></a></div><div class="wb-music-player-pbar"><div class="wb-music-player-pval" style="width: 47%;"></div></div></div><div class="wb-music-player-plist"><div class=" active">cypis - impra jest tu</div></div></div></div><div id="wb_element_instance39" class="wb_element" style="width: 100%; display: none;">
+</div><div id="wb_element_instance37" class="wb_element"><div></div></div><div id="wb_element_instance38" class="wb_element"><script type="text/javascript" src="index_pliki/audio.js"></script><script type="text/javascript" src="index_pliki/MusicPlayer.htm"></script><script type="text/javascript"> WBMusicPlayer.create(document.getElementById('wb_element_instance38'), {autoplay: true}).addAllItems(["gallery\/cypis - impra jest tu.mp3"]); </script></div><div id="wb_element_instance39" class="wb_element" style="width: 100%; display: none;">
 						<script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance39").hide();
