--- a/index.html
+++ b/index.html
@@ -26,9 +26,22 @@
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 <style>
+html {
+    width:100%;
+    height: 100%;
+    display: table;
+}
+
 body {
-        background-image: url("default.jpg");
-} 
+    width:100%;
+    display:table-cell;
+    background-image: url("default.jpg");
+}
+
+html, body {
+    margin: 0px;
+    padding: 0px;
+}
  
 </style></head>
 
