--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-</head>
+<style>
+html {
+    width:100%;
+    height: 100%;
+    display: table;
+}
+
+body {
+    width:100%;
+    display:table-cell;
+    background-image: url("default.jpg");
+}
+
+html, body {
+    margin: 0px;
+    padding: 0px;
+}
+ 
+</style></head>
 
 
 <body>
