--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ html, body {
 <body>
 <div class="root"><div class="vbox wb_container" id="wb_header">
 <audio id="muza" src="index_pliki/ahus.mp3" autoplay="autoplay" loop=""></audio>
-<div id="wb_element_instance0" class="wb_element"><ul class="vmenu"><li class="active"><a href="http://test.zyro.com/data/3/b/3b0ebe1b.test.test/out/Strona-G%C5%82%C3%B3wna/" target="_self" title="Strona Główna">Strona Główna</a></li><li><a href="http://dphz.ddns.net/serwery.html" target="_self" title="Serwery Minecraft">Serwery Minecraft</a></li><li><a href="http://dphz.ddns.net/kontakt.html" target="_self" title="Kontakt">Kontakt</a></li></ul></div><div id="wb_element_instance1" class="wb_element" style=" line-height: normal;"><h5 class="wb-stl-subtitle">xXxbogus420xXx.prv.pl</h5>
+<div id="wb_element_instance0" class="wb_element"><ul class="vmenu"><li class="active"><a href="http://dphz.ddns.net/" target="_self" title="Strona Główna">Strona Główna</a></li><li><a href="http://dphz.ddns.net/serwery.html" target="_self" title="Serwery Minecraft">Serwery Minecraft</a></li><li><a href="http://dphz.ddns.net/kontakt.html" target="_self" title="Kontakt">Kontakt</a></li></ul></div><div id="wb_element_instance1" class="wb_element" style=" line-height: normal;"><h5 class="wb-stl-subtitle">xXxbogus420xXx.prv.pl</h5>
 </div><div id="wb_element_instance6" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal"><strong><em>dphz's official website d-,b</em></strong></p>
 </div><div id="wb_element_instance7" class="wb_element"><img alt="85f13b2f0e25c1e572e3351eaa4035b9_900x700" src="index_pliki/fe7ce1a8c4ec6b74a56495e5159ca1e5_690x510.gif"></div></div>
 <div class="vbox wb_container" id="wb_main">
