--- a/jasny.html
+++ b/jasny.html
@@ -1,15 +1,81 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="pl"> 
 <head>
   <meta charset="utf-8" />
-  <title>Najlepsze filmy!</title>
-  <meta name="description" content="Przed tobą spis moich ulubionych filmów. Sprawdź czy nie masz czegoś dla siebie."/>
+  <title>Najlepsze Seriale, subiektywne Top 5.</title>
+  <meta name="description" content="Serwis prezentuje subiektywne top 5 serialii telewizyjnych, zobacz czy je znasz."/>
   <meta name="keywords" content="filmy, kino, najepsze filmy, komedia, top 10 filmów" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+  
+   <style>
+   #container 
+    {
+     width: 1000px;
+	 margin-left: auto;
+	 margin-right: auto;
+	}
+     #logo
+	 {
+	 background-color: black;
+	 color: white;
+	 text-align: center;
+	 padding: 15px;
+	 }
+	 #nav
+	 {
+	 float: left;
+	 background-color: gray;
+	 width: 480px;
+	 min-height: 1340px;
+	 max-height: 1340px;
+	 padding: 10px;
+	 padding: 10px;
+	 }
+	#content
+	 {
+	 float: left;
+	 padding: 20px;
+	 width: 280px;
+	 min-height: 1320px;
+	 max-height: 1320px;
+	 background-color: lightgray;
+    }
+	 #ad
+	 {
+     background: -webkit-linear-gradient(45deg, #fcecfc 0%,#fba6e1 50%,#fd89d7 100%,#ff7cd8 100%); /* Chrome10-25,Safari5.1-6 */
+	 float: left;
+	 width; 160px;
+	 min-height: 1340px;
+	 max-height: 1340px;
+	 padding: 10px;
+	 }
+   #footer
+	 {
+	 clear: both;
+	 background-color: black;
+	 color: white;
+	 text-align: center;
+	 padding: 20px;
+	 }
+   </style>
+  
   </head>
-
-<body>
-  <h1>Najlepsze Filmy!</h1>
+  
+  <body>
+  
+     <div id="container">
+	 
+	 <div id="logo">
+	       <h1>Najlepsze seriale, subiektywne top 5!</h1>
+	 </div>
+	 
+	 <div id="nav">
+	 Boku No Pico <br />
+	 Highschool DxD <br />
+	 To Love Ru! <br />
+	 Naruto jak zapomniec <br />
+	 Twoj staraa zapierdala d-,-b <br />
+	   <h1>Najlepsze Filmy!</h1>
 
   Komedia:<a href="http://www.filmweb.pl/Forrest.Gump" target="_blank" title="zobacz na filmwebie!">
      Forrest Gump (1994)
@@ -19,7 +85,7 @@
 	 <br /><br />
 	 
 	 <a href="http://www.filmweb.pl/Forrest.Gump" target="_blank" title="run forest ty kurwo"> 
-	 <img src="jasny_pliki/forest.jpg" />
+	 <img src="img/forest.jpg" />
 	 <br /><br />
 	 
 	 Komedia: <a href="http://www.filmweb.pl/Forrest.Gump" target"_blank" title="zobacz foresta bo nvvm skad mam wziac link do filmu oryginalnego analnego">
@@ -29,19 +95,38 @@
 	 <br /><br />
 	 
 	 <a href="http://www.filmweb.pl/Forrest.Gump" target="_blank" title="twoja stara">
-	 <img src="jasny_pliki/naruto.jpg" />
+	 <img src="img/naruto.jpg" />
 	 </a>
+	 <br /><br />
 	 
 	 Gorące Dupeczki: <a href="https://osu.ppy.sh/u/a d a n" target="_blank" title="najlepszy gracz">
 	 <br /><br />
 	 
-	 Mmmmmmm p a l c u w a 
+	 <a href="https://osu.ppy.sh/u/a d a n" title="najlepszy gracz">Mmmmmmm p a l c u w a</a>
 	 </ a>
 	  
 	  <br /><br />
 	  
-	  <img src="jasny_pliki/naruto.jpg" />
+	  <img src="img/naruto.jpg" />
 	  
 	 
-</body>
-</html>
+	 </div>
+	 
+	 <div id="content">
+	  <h2>Boku No Pico </h2>
+	  W styczniu 1655 roku młody żołnierz, Andrzej Kmicic, przybył do Wodoktów, by poznać swoją przyszłą żonę, Aleksandrę Billewiczównę. Bardzo przypadli sobie do gustu, ale niestety buńczuczna i awanturnicza natura Kmicica spowodowała gniew panny Aleksandry. Kmicic usiłował porwać dziewczynę, ale przegrał w pojedynku z niepozornym, ale w szabli niepokonanym Michałem Wołodyjowskim. Tymczasem na Rzeczpospolitą napadli Szwedzi, którzy dosłownie zalali nasz kraj, stąd przyjęło się nazywać ten fakt historyczny „potopem szwedzkim”. Kmicic w dobrej wierze przysiągł wierność litewskiemu magnatowi, księciu Januszowi Radziwiłłowi, ale ten okazał się zdrajcą. Wtedy młody rycerz musiał zmienić nazwisko i za wszelką cenę dążyć do rehabilitacji. Pod nazwiskiem Babinicza dzielnie bronił Jasnej Góry, a nawet dokonał bohaterskiego czynu i wysadził wielkie działo bojowe. Potem towarzyszył królowi Janowi Kazimierzowi powracającemu do kraju i z oddaniem bronił króla.
+	 </div>
+	 
+	 <div id="ad">
+	   <a href="http://sexy-animegirls.tumblr.com/"><img src="img/ad.gif" border="0"></img></a>
+	 </div>
+	 
+	 <div id="footer">
+	 Najlepsze Seriale Top 5! &copy; jasny
+	 </div>
+	 
+	 
+  
+  
+  </body>
+  </html>
