--- a/kino.html
+++ b/kino.html
@@ -8,28 +8,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
   
    <style>
-   #container 
-    {
-     width: 1000px;
-	 margin-left: auto;
-	 margin-right: auto;
-	}
 	 #nav
 	 {
 	 float: right;
 	 background-color: gray;
 	 width: 50%;
-	 min-height: 100%;
-	 max-height: 100%;
-	 padding: 10px;
+	 min-height: 1100px;
+	 max-height: 1100px;
+	 padding: 0px;
 	 }
 	#content
 	 {
 	 float: left;
-	 padding: 10px;
-	 width: 280px;
-	 min-height: 1320px;
-	 max-height: 1320px;
+	 padding: 0px;
+	 width: 50%;
+	 min-height: 1100px;
+	 max-height: 1100px;
 	 background-color: lightgray;
    </style>
   
@@ -38,12 +32,11 @@
   <body>
   
      <div id="nav">
-	 
-	 <iframe src="https://discordapp.com/channels/280740538179649536/280740538179649536" frameborder="0" width="100%" height="100%"></iframe>
+<iframe src="http://discordi.deliriousdrunkards.com/render?id=&theme=light&join=false&abc=false&showall=false&toggle=false&shownick=false" width="300px" height="400px" frameborder="0"></iframe>
 	 </div>
 	 
 	 <div id="content">
-	 <iframe src="https://craftsite.pl/forum/index.php?/shoutbox/" frameborder="0" width="100%" height="100%"></iframe>
+	 <iframe src="https://craftsite.pl/forum/index.php?/shoutbox/" frameborder="0" height="1000px" width="100%"></iframe>
 	 </div>
   
   </body>
