--- a/qflag/flagwaver.html
+++ b/qflag/flagwaver.html
@@ -19,7 +19,7 @@
 
         <!-- Libraries -->
         <link type="text/css" rel="stylesheet" href="./js/normalize.min.css">
-        <link type="text/css" rel="stylesheet" href="./js/css">
+        <link type="text/css" rel="stylesheet" href="./css.css">
         <script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="./js/three.min.js"></script>
         <script type="text/javascript" src="./js/modernizr.custom.95719.js"></script>
