--- a/flagwaver/index.html
+++ b/flagwaver/index.html
@@ -18,15 +18,14 @@
         <title>Online Flag Waver</title>
 
         <!-- Libraries -->
-        <link type="text/css" rel="stylesheet" href="./js/normalize.min.css">
-        <link type="text/css" rel="stylesheet" href="./css.css">
+        <link type="text/css" rel="stylesheet" href="./css/normalize.min.css">
         <script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="./js/three.min.js"></script>
         <script type="text/javascript" src="./js/modernizr.custom.95719.js"></script>
         <script type="text/javascript" src="./js/rivets.bundled.min.js"></script>
 
         <!-- Main -->
-        <link type="text/css" rel="stylesheet" href="./js/flagwaver-ui.css">
+        <link type="text/css" rel="stylesheet" href="./css/flagwaver-ui.css">
         <script type="text/javascript" src="./js/hashvars.js"></script>
         <script type="text/javascript" src="./js/flagwaver.js"></script>
         <script type="text/javascript" src="./js/flagwaver-ui.js"></script>
