--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)http://test.zyro.com/data/c/2/c24cd86e.test.test/out/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
 	<title>faine</title>
@@ -24,14 +23,14 @@
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<audio controls autoplay>
+	<audio autoplay loop>
     <source src="index_files/muza.mp3">
     Your browser does not support the audio element.
     </audio>
 </head>
 
 
-<body><div class="root"><div class="vbox wb_container" id="wb_header">
+<body style="background-image:url(default.jpg)"><div class="root"><div class="vbox wb_container" id="wb_header">
 	
 <div id="wb_element_instance0" class="wb_element wb-menu"><ul class="hmenu"><li class="active"><a href="https://dphz.github.io" target="_self" title="Strona główna">Strona główna</a></li><li class=""><a href="https://cbxt.jimdo.com" target="_self" title="Serwery Minecraft">Serwery Minecraft</a></li><li class=""><a href="https://cbxt.jimdo.com/kontakt" target="_self" title="Kontakt">Kontakt</a></li></ul><div class="clearfix"></div></div><div id="wb_element_instance1" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle">jacex.fora.pl</h4>
 </div><div id="wb_element_instance2" class="wb_element" style=" line-height: normal;"><h5 class="wb-stl-subtitle">Oficjalna strona internetowa</h5>
