--- a/jasny.html
+++ b/jasny.html
@@ -118,7 +118,7 @@
 	 </div>
 	 
 	 <div id="ad">
-	   <a href="http://sexy-animegirls.tumblr.com/"><img src="img/ad.gif" border="0"></img></a>
+	   <a href="https://www.youtube.com/watch?v=eAugTSGaLd0"><img src="img/ad.gif" border="0"></img></a>
 	 </div>
 	 
 	 <div id="footer">
