--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<!-- saved from url=(0064)file:///C:/Users/dphz/Documents/GitHub/dphz.github.io/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
 	<title>faine</title>
-	<!--<base href="http://test.zyro.com/data/c/2/c24cd86e.test.test/out/">--><base href=".">
+	<!--<base href="http://test.zyro.com/data/c/2/c24cd86e.test.test/out/">--><!--<base href=".">--><base href=".">
 			<meta name="viewport" content="width=1200">
 		<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -23,37 +24,37 @@
 	<!--[if lt IE 9]>
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<audio autoplay loop>
-    <source src="index_files/muza.mp3">
+	</head><body style="background-image:url(default.jpg)"><audio autoplay="" loop="">
+    <source src="index_files/muza.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
     </audio>
-</head>
 
 
-<body style="background-image:url(default.jpg)"><div class="root"><div class="vbox wb_container" id="wb_header">
+
+<div class="root"><div class="vbox wb_container" id="wb_header">
 	
-<div id="wb_element_instance0" class="wb_element wb-menu"><ul class="hmenu"><li class="active"><a href="https://dphz.github.io" target="_self" title="Strona główna">Strona główna</a></li><li class=""><a href="https://cbxt.jimdo.com" target="_self" title="Serwery Minecraft">Serwery Minecraft</a></li><li class=""><a href="https://cbxt.jimdo.com/kontakt" target="_self" title="Kontakt">Kontakt</a></li></ul><div class="clearfix"></div></div><div id="wb_element_instance1" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle">jacex.fora.pl</h4>
+<div id="wb_element_instance1" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle">jacex.fora.pl</h4>
 </div><div id="wb_element_instance2" class="wb_element" style=" line-height: normal;"><h5 class="wb-stl-subtitle">Oficjalna strona internetowa</h5>
 </div></div>
 <div class="vbox wb_container" id="wb_main">
 	
-<div id="wb_element_instance7" class="wb_element wb_element_picture"><img alt="gallery/01" src="./index_files/6933df4880583d52f9654ca6fa4255e3_300x191.jpg"></div><div id="wb_element_instance8" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">BooBox Adminem</a></p>
+<div id="wb_element_instance7" class="wb_element wb_element_picture"><img alt="gallery/01" src="./index_files/6933df4880583d52f9654ca6fa4255e3_300x191.jpg"></div><div id="wb_element_instance8" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">BooBox Adminem</p>
 
-<p class="wb-stl-normal">Najebany BooBox napisał, że Krystian439 to pedofil :D</p>
-</div><div id="wb_element_instance9" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">Please insert information that will be useful to your...</a></p>
+<p class="wb-stl-normal">Na***any BooBox napisał, że Krystian439 to pedofil :D</p>
+</div><div id="wb_element_instance9" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">Please insert information that will be useful to your...</p>
 <p class="wb-stl-normal">Customers here Please insert information that will be useful to your customers here Please insert information that...</p></div><div id="wb_element_instance10" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1"><strong>ZA DARMOLA :D</strong></h1>
-</div><div id="wb_element_instance11" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">WYJEBAŁO FORUM</h1>
+</div><div id="wb_element_instance11" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">WY!@#$ŁO FORUM</h1>
 </div><div id="wb_element_instance12" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">FORUM OTWARTE</h1>
 </div><div id="wb_element_instance13" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">ferie</h1>
 </div><div id="wb_element_instance14" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal"><span class="wb-stl-special">Szalony taniec i dobra muza q-'-p</span></p>
 </div><div id="wb_element_instance15" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">2017-01-25</p>
 
-<p class="wb-stl-normal">Wyj****ebało forum O_o DZIĘKI ZA AKTYWNOŚĆ!!!</p>
+<p class="wb-stl-normal">Wywaliło forum O_o DZIĘKI ZA AKTYWNOŚĆ!!!</p>
 </div><div id="wb_element_instance16" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">2017-01-21</p>
 
 <p class="wb-stl-normal">NARESZCIE FERIE!!!</p>
 
-<p class="wb-stl-normal">MOGĘ ODPOCZĄĆ OD JEB*****ANEJ SZKOŁY ;-)</p>
+<p class="wb-stl-normal">MOGĘ ODPOCZĄĆ OD J****** SZKOŁY ;-)</p>
 </div><div id="wb_element_instance17" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance18" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance19" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance20" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">Wydarzenia</h1>
 </div><div id="wb_element_instance21" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">DJ na topie</h1>
 </div><div id="wb_element_instance22" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1">Bilety</h1>
@@ -71,12 +72,12 @@
 
 <p class="wb-stl-normal">Dużo zdrówka, pomyślności, ładnych dziewczyn i IMpReZ z ziMeCZKaMI ; ))))</p>
 </div><div id="wb_element_instance36" class="wb_element wb_element_picture"><img alt="gallery/haha" src="./index_files/6bec932acfd1859e6b895b51b552b08c_300x225.gif"></div><div id="wb_element_instance37" class="wb_element wb_element_picture"><img alt="gallery/cp" src="./index_files/b7784071939dcdb732707edd7f0cb621_860x440.png"></div><div id="wb_element_instance38" class="wb_element wb_element_picture"><img alt="gallery/^6878a7a37bbc74bd17d54a30502823ada6517335bbd3ed763d^tfile_urlpv" src="./index_files/cb2267b72f3092ee8db6e12da2d75213_320x213.jpg"></div><div id="wb_element_instance39" class="wb_element wb-elm-orient-horizontal"><div class="wb-elm-line"></div></div><div id="wb_element_instance40" class="wb_element" style=" line-height: normal;"><h4 class="wb-stl-pagetitle"><strong>POLECAMY</strong></h4>
-</div><div id="wb_element_instance41" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance42" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance43" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance44" class="wb_element wb_element_picture"><img alt="gallery/jasny" src="./index_files/f050bd4f37341968c6da617d13fca76b_150x150.gif"></div><div id="wb_element_instance45" class="wb_element wb_element_picture"><img alt="gallery/memix" src="./index_files/2d526030527ef5e7d0418237693b46f4_370x170.gif"></div><div id="wb_element_instance46" class="wb_element wb_element_picture"><img alt="gallery/poniacz" src="./index_files/8dd18de095cec7827ca9512e4d527350_150x150.png"></div><div id="wb_element_instance47" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1"><em>Marcinex2002</em></h1>
+</div><div id="wb_element_instance41" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance42" class="wb_element wb_element_shape"><div class="wb_shp"></div></div><div id="wb_element_instance44" class="wb_element wb_element_picture"><img alt="gallery/jasny" src="./index_files/f050bd4f37341968c6da617d13fca76b_150x150.gif"></div><div id="wb_element_instance46" class="wb_element wb_element_picture"><img alt="gallery/poniacz" src="./index_files/8dd18de095cec7827ca9512e4d527350_150x150.png"></div><div id="wb_element_instance47" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1"><em>Marcinex2002</em></h1>
 </div><div id="wb_element_instance48" class="wb_element" style=" line-height: normal;"><h1 class="wb-stl-heading1"><em>JASNY</em></h1>
-</div><div id="wb_element_instance49" class="wb_element" style=" line-height: normal;"><h2 class="wb-stl-heading2"><a href="https://www.youtube.com/channel/UCEom_TgN-AzPFeuP7ydXuMg"><em><strong>YouTube</strong></em></a></h2>
+</div><div id="wb_element_instance49" class="wb_element" style=" line-height: normal;"><h2 class="wb-stl-heading2"><a href="http://xd.pl/"><em><strong>YouTube</strong></em></a></h2>
 </div><div id="wb_element_instance50" class="wb_element" style=" line-height: normal;"><h2 class="wb-stl-heading2"><a href="https://www.youtube.com/channel/UCW5anmLebnC9n7Rx_yj8APw" title="choc adasiu."><em><strong>YouTube</strong></em></a></h2>
 </div><div id="wb_element_instance51" class="wb_element" style=" line-height: normal;"><h2 class="wb-stl-heading2"><a href="http://dphz.github.io/jasny"><em><strong>STRONA :DD [klikaj!!!!]</strong></em></a></h2>
-</div><div id="wb_element_instance52" class="wb_element" style=" line-height: normal;"><p class="wb-stl-normal">Enter your text here</p></div><div id="wb_element_instance53" class="wb_element"><a class="wb_button" href="https://8ch.net/rule34/res/8744.html"><span></span></a></div><div id="wb_element_instance54" class="wb_element" style="width: 100%; display: none;">
+</div><div id="wb_element_instance54" class="wb_element" style="width: 100%; display: none;">
 						<script type="text/javascript">
 				$(function() {
 					$("#wb_element_instance54").hide();
@@ -86,6 +87,6 @@
 <div class="vbox wb_container" id="wb_footer">
 	
 <div id="wb_element_instance3" class="wb_element" style=" line-height: normal;"><p class="wb-stl-footer">© 2017 dphz</p>
-</div><div id="wb_element_instance4" class="wb_element wb_element_picture"><a href="http://twitter.com/"><img alt="gallery/m_twitter" src="./index_files/72882f489611888225138c908497fe38_29x28.png"></a></div><div id="wb_element_instance5" class="wb_element wb_element_picture"><a href="http://facebook.com/"><img alt="gallery/m_fb" src="./index_files/ceaed2bd7103f405521d9df9d11c7617_29x28.png"></a></div><div id="wb_element_instance6" class="wb_element"><div class="wb-stl-footer">Powered by <i class="icon-wb-logo"></i><a href="http://zyro.com/" target="_blank" title="Zyro - Website Builder">Zyro</a></div></div></div><div class="wb_sbg"></div></div>
+</div></div><div class="wb_sbg"></div></div>
 
 </body></html>
