--- a/sv/index.html
+++ b/sv/index.html
@@ -37,7 +37,7 @@ a:hover {
     position: absolute;
     top: 96%;
     left: 50%;
--ms-transform: translate(-50%, -50%);
+ -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);   
 }
 </style>
@@ -84,13 +84,11 @@ z-index: 1;">
 <img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;">
 </div>
 <div class="to-na-dole">
-  <p>
-<a href=https://discord.gg/cyg6kGp>vintage discord</a>  
+<a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</a>  
 <a href=https://imgur.com/a/hTNfOV5>screeny</a>  
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a>  
 <a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>etykieta</a>  
-<a href=https://discord.gg/4jDHs2D>discord new</a>  
-</p>
+<a href=https://discord.gg/4jDHs2D>discord</a>  
 <!--
 <div style="
 position: absolute;
