--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -1,6 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Open Sans">
 
 <div style="
 position: fixed;
@@ -19,7 +21,7 @@ width: 100%;
 height: 100%;
 left: 0px;
 top: 0px;
-z-index: 0.5;
+z-index: -1;
 background: linear-gradient(#00000035, #00000000, #00000059);">
 </div>
 <div style="
@@ -28,7 +30,7 @@ width: 100%;
 height: 10%;
 left: 0px;
 top: 90%;
-z-index: 0.5;
+z-index: -1;
 background: linear-gradient(#00000000, #00000099);">
 </div>
 <div style="
@@ -41,17 +43,19 @@ background: linear-gradient(#00000000, #00000099);">
     -webkit-animation:hue 15s linear infinite;
 z-index: 1;">
 </div>
+<div>
 <style>
 .main {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 150%;
+  font-family: 'Open Sans', serif;
+  font-size: 130%;
   width: 50%;
   margin: 24px auto 0;
   padding-bottom: 24px;
-  z-index: 2;
   color: rgb(255, 255, 255);
 }
 </style>
+
+</div>
 <!--
 <div style="
 position: absolute;
@@ -76,9 +80,10 @@ background: url(https://i.imgur.com/k1pFWAb.png) 100% 10% / cover no-repeat scro
 
 
 <div class="main">
-<h1> grube lolo </h1>
+<h1> Jak zdobyć VIPa? </h1>
+<h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
   <p>
-orem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
+Rangę VIP wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
 
 Do czego tego użyć?
 Ogólnie znana teza głosi, iż użytkownika może rozpraszać zrozumiała zawartość strony, kiedy ten chce zobaczyć sam jej wygląd. Jedną z mocnych stron używania Lorem Ipsum jest to, że ma wiele różnych „kombinacji” zdań, słów i akapitów, w przeciwieństwie do zwykłego: „tekst, tekst, tekst”, sprawiającego, że wygląda to „zbyt czytelnie” po polsku. Wielu webmasterów i designerów używa Lorem Ipsum jako domyślnego modelu tekstu i wpisanie w internetowej wyszukiwarce ‘lorem ipsum’ spowoduje znalezienie bardzo wielu stron, które wciąż są w budowie. Wiele wersji tekstu ewoluowało i zmieniało się przez lata, czasem przez przypadek, czasem specjalnie (humorystyczne wstawki itd).
