jak zdobyć vipa
tu się nie dowiesz

--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -1,6 +1,9 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Open Sans">
 
 <div style="
 position: fixed;
@@ -12,14 +15,28 @@ z-index: -1;
 background: url(https://i.imgur.com/qzQgP81.png) 50% 50% / cover no-repeat scroll padding-box;
 ">
 </div>
-
+<style>
+a:link {
+    color: rgb(200, 200, 200);
+    text-decoration: underline;
+}
+a:hover {
+    color: rgb(230, 230, 230);
+    text-decoration: none;
+}
+a:visited {
+    color: white;
+    color: rgb(200, 160, 200);
+    text-decoration: underline;
+}
+</style>
 <div style="
 position: fixed;
 width: 100%;
 height: 100%;
 left: 0px;
 top: 0px;
-z-index: 0.5;
+z-index: -1;
 background: linear-gradient(#00000035, #00000000, #00000059);">
 </div>
 <div style="
@@ -28,7 +45,7 @@ width: 100%;
 height: 10%;
 left: 0px;
 top: 90%;
-z-index: 0.5;
+z-index: -1;
 background: linear-gradient(#00000000, #00000099);">
 </div>
 <div style="
@@ -41,17 +58,19 @@ background: linear-gradient(#00000000, #00000099);">
     -webkit-animation:hue 15s linear infinite;
 z-index: 1;">
 </div>
+<div>
 <style>
 .main {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 150%;
-  width: 50%;
+  font-family: 'Open Sans', serif;
+  font-size: 130%;
+  width: 65%;
   margin: 24px auto 0;
   padding-bottom: 24px;
-  z-index: 2;
   color: rgb(255, 255, 255);
 }
 </style>
+
+</div>
 <!--
 <div style="
 position: absolute;
@@ -76,19 +95,22 @@ background: url(https://i.imgur.com/k1pFWAb.png) 100% 10% / cover no-repeat scro
 
 
 <div class="main">
-<h1> grube lolo </h1>
+<h1> Jak zdobyć VIPa? </h1>
+<h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
   <p>
-orem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
-
-Do czego tego użyć?
-Ogólnie znana teza głosi, iż użytkownika może rozpraszać zrozumiała zawartość strony, kiedy ten chce zobaczyć sam jej wygląd. Jedną z mocnych stron używania Lorem Ipsum jest to, że ma wiele różnych „kombinacji” zdań, słów i akapitów, w przeciwieństwie do zwykłego: „tekst, tekst, tekst”, sprawiającego, że wygląda to „zbyt czytelnie” po polsku. Wielu webmasterów i designerów używa Lorem Ipsum jako domyślnego modelu tekstu i wpisanie w internetowej wyszukiwarce ‘lorem ipsum’ spowoduje znalezienie bardzo wielu stron, które wciąż są w budowie. Wiele wersji tekstu ewoluowało i zmieniało się przez lata, czasem przez przypadek, czasem specjalnie (humorystyczne wstawki itd).
-
-
-Skąd się to wzięło?
-W przeciwieństwie do rozpowszechnionych opinii, Lorem Ipsum nie jest tylko przypadkowym tekstem. Ma ono korzenie w klasycznej łacińskiej literaturze z 45 roku przed Chrystusem, czyli ponad 2000 lat temu! Richard McClintock, wykładowca łaciny na uniwersytecie Hampden-Sydney w Virginii, przyjrzał się uważniej jednemu z najbardziej niejasnych słów w Lorem Ipsum – consectetur – i po wielu poszukiwaniach odnalazł niezaprzeczalne źródło: Lorem Ipsum pochodzi z fragmentów (1.10.32 i 1.10.33) „de Finibus Bonorum et Malorum”, czyli „O granicy dobra i zła”, napisanej właśnie w 45 p.n.e. przez Cycerona. Jest to bardzo popularna w czasach renesansu rozprawa na temat etyki. Pierwszy wiersz Lorem Ipsum, „Lorem ipsum dolor sit amet...” pochodzi właśnie z sekcji 1.10.32.
-
-Standardowy blok Lorem Ipsum, używany od XV wieku, jest odtworzony niżej dla zainteresowanych. Fragmenty 1.10.32 i 1.10.33 z „de Finibus Bonorum et Malorum” Cycerona, są odtworzone w dokładnej, oryginalnej formie, wraz z angielskimi tłumaczeniami H. Rackhama z 1914 roku.
+1. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi dphz odpowiednią ilość "diaxów":
+<ul style="list-style-type:none"><li>- 125, jeżeli chcesz otrzymać rangę na 3 miesiące</li><li>- 200, jeżeli chcesz otrzymać rangę na do końca edycji ("na zawsze")</li></ul></p>
+<p>
+2.
+Nagrywaj i streamuj z serwera!</p>
+<p>
+Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.
 </p>
+<p>3. Kup usługę VIP7 lub VIP30 używając serwerowej komendy /sklep.</p>
+<p>4. Rangę VIP można też zdobyć za pomocą PayPala przesyłając 32 zł na odpowiednie konto. Aby dowiedzieć się więcej, skontaktuj się z managerem serwera - tam otrzymasz resztę informacji.</p>
+<p>Kontakt z managerem - Discord: dphz#9803</p>
+<p style="color: rgba(255, 220, 25, 0)">:P</p>
+<p style="color: rgb(220, 220, 220)"><a href="https://dphz.github.io/sv">Strona główna</a></p>
 </div>
 
 
