--- a/sv/index.html
+++ b/sv/index.html
@@ -1,10 +1,12 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/9G5MhGK.png"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 <style>
 /* unvisited link */
 a:link {
-	font-family: Arial, Helvetica, sans-serif;
     font-size: 90%;
     color: white;
     text-decoration: none;
@@ -35,7 +37,9 @@ a:hover {
     color: white;
     font-style: italic;
     position: absolute;
-    top: 96%;
+    text-shadow: 0 0 5px #000000;
+    font-family: 'Open Sans', serif;
+    top: 96.5%;
     left: 50%;
  -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);   
@@ -49,7 +53,7 @@ height: 100%;
 left: 0px;
 top: 0px;
 z-index: -1;
-background: url(https://i.imgur.com/qzQgP81.png) 50% 50% / cover no-repeat scroll padding-box;
+background: url(https://i.imgur.com/VzfHysv.jpg) 50% 50% / cover no-repeat scroll padding-box;
 ">
 </div>
 
@@ -71,7 +75,6 @@ top: 90%;
 z-index: 0.5;
 background: linear-gradient(#00000000, #00000099);">
 </div>
-
 <div style="
     margin: 0;
     position: absolute;
@@ -81,7 +84,9 @@ background: linear-gradient(#00000000, #00000099);">
     transform: translate(-50%, -50%);
     -webkit-animation:hue 15s linear infinite;
 z-index: 1;">
+<a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>
 <img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;">
+</a>
 </div>
 <div class="to-na-dole">
 <a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</a>  
