--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Open Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans"/>
+	<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/9G5MhGK.png"/>
 
 <div style="
 position: fixed;
@@ -12,7 +12,8 @@ height: 100%;
 left: 0px;
 top: 0px;
 z-index: -1;
-background: url(https://i.imgur.com/qzQgP81.png) 50% 50% / cover no-repeat scroll padding-box;
+  background-image: url(https://i.imgur.com/3OicvMK.png);
+  background-repeat:repeat;
 ">
 </div>
 <style>
@@ -62,37 +63,22 @@ z-index: 1;">
 <style>
 .main {
   font-family: 'Open Sans', serif;
-  font-size: 130%;
+  font-size: 120%;
+  text-align: justify;
+  text-justify: inter-word;
   width: 65%;
-  margin: 24px auto 0;
+  margin: 60px auto 0;
   padding-bottom: 24px;
-  color: rgb(255, 255, 255);
+  color: rgb(230, 230, 230);
 }
 </style>
-
 </div>
-<!--
-<div style="
-position: absolute;
-width: 10%;
-height: 30%;
-left: 50%;
-right: 50%;
-top: 0%;
-z-index: 0.7;
-background: url(https://i.imgur.com/k1pFWAb.png) 100% 10% / cover no-repeat scroll padding-box;">
-
-<div style="">
--->
 </head>
 
 
 
 
-
 <body>
-
-
 
 <div class="main">
 <h1> Jak zdobyć VIPa? </h1>
@@ -104,10 +90,10 @@ background: url(https://i.imgur.com/k1pFWAb.png) 100% 10% / cover no-repeat scro
 2.
 Nagrywaj i streamuj z serwera!</p>
 <p>
-Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber.
+Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas trwania edycji.
 </p>
-<p>3. Kup usługę VIP7 lub VIP30 używając serwerowej komendy /sklep.</p>
-<p>4. Rangę VIP można też zdobyć za pomocą PayPala przesyłając 32 zł na odpowiednie konto. Aby dowiedzieć się więcej, skontaktuj się z managerem serwera - tam otrzymasz resztę informacji.</p>
+<p>3. Kup usługę VIP7 (ranga na 7 dni) lub VIP30 (ranga na 30 dni) używając serwerowej komendy /sklep.</p>
+<p>4. Rangę VIP można też zdobyć za pomocą PayPala przesyłając 35 zł na odpowiednie konto. Aby dowiedzieć się więcej, skontaktuj się z managerem serwera - tam otrzymasz resztę informacji. Rangę dostajesz na czas całej edycji.</p>
 <p>Kontakt z managerem - Discord: dphz#9803</p>
 <p style="color: rgba(255, 220, 25, 0)">:P</p>
 <p style="color: rgb(220, 220, 220)"><a href="https://dphz.github.io/sv">Strona główna</a></p>
