co daje ranga vip?
bo ja nie wiem

--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -1,4 +1,5 @@
 ﻿
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -93,8 +94,13 @@ Nagrywaj i streamuj z serwera!</p>
 Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas trwania edycji.
 </p>
 <p>3. Kup usługę VIP7 (ranga na 7 dni) lub VIP30 (ranga na 30 dni) używając serwerowej komendy /sklep.</p>
-<p>4. Rangę VIP można też zdobyć za pomocą PayPala przesyłając 35 zł na odpowiednie konto. Aby dowiedzieć się więcej, skontaktuj się z managerem serwera - tam otrzymasz resztę informacji. Rangę dostajesz na czas całej edycji.</p>
+<p>4. Rangę VIP można też zdobyć za pomocą PayPala:
+<ul style="list-style-type:none"><li>- przesyłając 7 zł, aby otrzymać rangę na 2 miesiące</li><li>- przesyłając 32 zł, aby otrzymać rangę do końca edycji</li></ul>
+Aby dowiedzieć się więcej i otrzymać dane wymagane do przesłania pieniędzy, skontaktuj się z managerem serwera - tam otrzymasz resztę informacji.</p>
 <p>Kontakt z managerem - Discord: dphz#9803</p>
+<p style="margin: 64px"></p>
+<h1> Co daje ranga VIP? </h1>
+<ul><li>specjalny prefiks na czacie</li><li>możliwość formatowania tekstu na czacie</li><li>dostęp do /skull</li><li>bardzo obniża cenę komendy /lot</li><li>dostęp do przenośnego workbencha (/wb)</li><li>dostęp do przenośnego enderchesta (/ec)</li><li>40 sethome zamiast 20</li><li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li><li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li></ul>
 <p style="color: rgba(255, 220, 25, 0)">:P</p>
 <p style="color: rgb(220, 220, 220)"><a href="https://dphz.github.io/sv">Strona główna</a></p>
 </div>
