--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -85,22 +85,45 @@ z-index: 1;">
 <h1> Jak zdobyć VIPa? </h1>
 <h3> Rangę VIP można zdobyć na kilka sposobów. Oto one:</h3>
   <p>
-1. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi dphz odpowiednią ilość "diaxów":
-<ul style="list-style-type:none"><li>- 125, jeżeli chcesz otrzymać rangę na 3 miesiące</li><li>- 200, jeżeli chcesz otrzymać rangę na do końca edycji ("na zawsze")</li></ul></p>
-<p>
+1. <a href="https://craftportal.pl/forum/index.php?/user/698801-dphz/">Przekaż na forum CraftPortal</a> (dawniej CraftSite) użytkownikowi dphz odpowiednią ilość "diaxów" (w treści donacji dopisz "ranga VIP"):
+<ul style="list-style-type:none">
+<li>- 15, jeżeli chcesz otrzymać rangę na 7 dni</li>
+<li>- 60, jeżeli chcesz otrzymać rangę na miesiąc</li>
+<li>- 180, jeżeli chcesz otrzymać rangę na 3 miesiące</li>
+<li>- 300, jeżeli chcesz otrzymać rangę na do końca edycji ("na zawsze")</li>
+</ul>
+</p><p>
 2.
-Nagrywaj i streamuj z serwera!</p>
-<p>
+Nagrywaj i streamuj z serwera! </p><p>
 Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że masz wystarczającą ilość followów/subskrypcji/wyświetleń i będziesz streamować i/lub nagrywać z serwera, otrzymasz specjalną odmianę rangi VIP - YouTuber. Rangę otrzymujesz na czas trwania edycji.
 </p>
-<p>3. Kup usługę VIP7 (ranga na 7 dni) lub VIP30 (ranga na 30 dni) używając serwerowej komendy /sklep.</p>
-<p>4. Rangę VIP można też zdobyć za pomocą PayPala:
-<ul style="list-style-type:none"><li>- przesyłając 7 zł, aby otrzymać rangę na 2 miesiące</li><li>- przesyłając 32 zł, aby otrzymać rangę do końca edycji</li></ul>
-Aby dowiedzieć się więcej i otrzymać dane wymagane do przesłania pieniędzy, skontaktuj się z managerem serwera - tam otrzymasz resztę informacji.</p>
+<p>3. Kup odpowiednią usługę za pomocą serwerowej komendy /sklep:
+<ul style="list-style-type:none">
+<li>- VIP3 (ranga na 3 dni)</li>
+<li>- VIP7 (ranga na 7 dni)</li>
+<li>- VIP30 (ranga na 30 dni)</li>
+<li>- VIP45 (ranga na 45 dni)</li>
+</ul>
+<p>4. Jeżeli odwdzięczysz się pieniężnie za grę na serwerze za pomocą PayPala lub przelewu, możesz otrzymać rangę VIP:
+<ul style="list-style-type:none">
+<li>- 8 zł -> ranga na 2 miesiące</li>
+<li>- 32 zł -> ranga "na zawsze" (do końca edycji)</li>
+</ul>
+Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z managerem serwera.</p>
 <p>Kontakt z managerem - Discord: dphz#9803</p>
 <p style="margin: 64px"></p>
 <h1> Co daje ranga VIP? </h1>
-<ul><li>specjalny prefiks na czacie</li><li>możliwość formatowania tekstu na czacie</li><li>dostęp do /skull</li><li>bardzo obniża cenę komendy /lot</li><li>dostęp do przenośnego workbencha (/wb)</li><li>dostęp do przenośnego enderchesta (/ec)</li><li>40 sethome zamiast 20</li><li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li><li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li></ul>
+<ul>
+<li>specjalny prefiks na czacie</li>
+<li>możliwość formatowania tekstu na czacie</li>
+<li>dostęp do /skull</li>
+<li>bardzo obniża cenę komendy /lot</li>
+<li>dostęp do przenośnego workbencha (/wb)</li>
+<li>dostęp do przenośnego enderchesta (/ec)</li>
+<li>40 sethome zamiast 20</li>
+<li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
+<li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
+</ul>
 <p style="color: rgba(255, 220, 25, 0)">:P</p>
 <p style="color: rgb(220, 220, 220)"><a href="https://dphz.github.io/sv">Strona główna</a></p>
 </div>
