--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -104,7 +104,7 @@ Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że m
 <li>- VIP30 (ranga na 30 dni)</li>
 <li>- VIP45 (ranga na 45 dni)</li>
 </ul>
-<p>4. Jeżeli odwdzięczysz się pieniężnie za grę na serwerze za pomocą PayPala lub przelewu, możesz otrzymać rangę VIP:
+<p>4. Jeżeli odwdzięczysz się pieniężnie za grę na serwerze za pomocą PayPala możesz otrzymać rangę VIP:
 <ul style="list-style-type:none">
 <li>- 8 zł -> ranga na 2 miesiące</li>
 <li>- 32 zł -> ranga "na zawsze" (do końca edycji)</li>
