--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -117,7 +117,7 @@ Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, 
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie</li>
 <li>dostęp do /skull</li>
-<li>bardzo obniża cenę komendy /lot</li>
+<li>znosi opłaty za komendę /lot</li>
 <li>dostęp do przenośnego workbencha (/wb)</li>
 <li>dostęp do przenośnego enderchesta (/ec)</li>
 <li>40 sethome zamiast 20</li>
