--- a/sv/jak-zdobyc-vipa/index.html
+++ b/sv/jak-zdobyc-vipa/index.html
@@ -1,5 +1,6 @@
 ﻿
 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,6 +18,7 @@ z-index: -1;
   background-repeat:repeat;
 ">
 </div>
+
 <style>
 a:link {
     color: rgb(200, 200, 200);
@@ -31,7 +33,10 @@ a:visited {
     color: rgb(200, 160, 200);
     text-decoration: underline;
 }
+
 </style>
+
+
 <div style="
 position: fixed;
 width: 100%;
@@ -41,6 +46,7 @@ top: 0px;
 z-index: -1;
 background: linear-gradient(#00000035, #00000000, #00000059);">
 </div>
+<!--
 <div style="
 position: fixed;
 width: 100%;
@@ -50,6 +56,7 @@ top: 90%;
 z-index: -1;
 background: linear-gradient(#00000000, #00000099);">
 </div>
+
 <div style="
     margin: 0;
     position: absolute;
@@ -60,6 +67,8 @@ background: linear-gradient(#00000000, #00000099);">
     -webkit-animation:hue 15s linear infinite;
 z-index: 1;">
 </div>
+-->
+
 <div>
 <style>
 .main {
@@ -90,7 +99,7 @@ z-index: 1;">
 <li>- 15, jeżeli chcesz otrzymać rangę na 7 dni</li>
 <li>- 60, jeżeli chcesz otrzymać rangę na miesiąc</li>
 <li>- 180, jeżeli chcesz otrzymać rangę na 3 miesiące</li>
-<li>- 300, jeżeli chcesz otrzymać rangę na do końca edycji ("na zawsze")</li>
+<li>- 300, jeżeli chcesz otrzymać rangę na czas trwania bieżącej edycji ("na zawsze")</li>
 </ul>
 </p><p>
 2.
@@ -104,12 +113,7 @@ Skontakuj się z managerem serwera i pokaż swój kanał. Jeżeli uzna on, że m
 <li>- VIP30 (ranga na 30 dni)</li>
 <li>- VIP45 (ranga na 45 dni)</li>
 </ul>
-<p>4. Jeżeli odwdzięczysz się pieniężnie za grę na serwerze za pomocą PayPala możesz otrzymać rangę VIP:
-<ul style="list-style-type:none">
-<li>- 8 zł -> ranga na 2 miesiące</li>
-<li>- 32 zł -> ranga "na zawsze" (do końca edycji)</li>
-</ul>
-Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z managerem serwera.</p>
+<p>4. Jeżeli zdecydujesz się przekazać darowiznę w ramach podziękowania za grę na serwerze za pomocą PayPal lub PaySafeCard, znacznie zwiększasz swoje szanse na otrzymanie rangi VIP. Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, skontaktuj się z managerem serwera.</p>
 <p>Kontakt z managerem - Discord: dphz#9803</p>
 <p style="margin: 64px"></p>
 <h1> Co daje ranga VIP? </h1>
@@ -117,10 +121,11 @@ Aby dowiedzieć się więcej i otrzymać dane wymagane do wysłania pieniędzy, 
 <li>specjalny prefiks na czacie</li>
 <li>możliwość formatowania tekstu na czacie</li>
 <li>dostęp do /skull</li>
+<li>dostęp do komendy /near</li>
 <li>znosi opłaty za komendę /lot</li>
 <li>dostęp do przenośnego workbencha (/wb)</li>
 <li>dostęp do przenośnego enderchesta (/ec)</li>
-<li>40 sethome zamiast 20</li>
+<li>18 sethome zamiast 9</li>
 <li>możliwość stworzenia 60 cuboidów 2D (zamiast 25 u zwykłego gracza)</li>
 <li>możliwość stworzenia 90 cuboidów 3D (zamiast 45 u zwykłego gracza)</li>
 </ul>
