--- a/sv/index.html
+++ b/sv/index.html
@@ -1,4 +1,5 @@
 ﻿
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -76,24 +77,39 @@ z-index: 0.5;
 background: linear-gradient(#00000000, #00000099);">
 </div>
 <div style="
-    margin: 0;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+   position: absolute;
+   top: 42%;
+   left: 50%;
+   width: 500px;
+   height: 500px;
+   margin-top: -250px;
+   margin-left: -250px;
     -webkit-animation:hue 15s linear infinite;
 z-index: 1;">
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>
 <img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;">
 </a>
+<div style="
+    color: white;
+    position: fixed;
+     top: 27%;
+    text-shadow: 0 2px 15px #000000;
+    font-family: 'Open Sans', serif;
+    width: 80%;
+    left: 10%;
+    text-align: center;
+  text-justify: inter-word;
+">
+<h3 style=" text-decoration: none; font-weight: normal;"><center>Czym jest Mate Survival?</center></h3>
+Mate Survival jest nowoczesnym serwerem przenoszącym doświadczenie rodem z klasycznych, małych, prywatnych serwerów do gry z kolegami/ekipą do publicznej formy oferując przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, płatną teleportację, system aukcji, dedykowane warpy dla graczy, lepsze drogi i trampoliny.
+<h3 style=" text-decoration: none; font-weight: normal;"><center>Czym <b>nie</b> jest Mate Survival?</center></h3><p>
+Mate Survival nie jest czystym survivalem z krwi i kości. Co ciekawe, na początku właśnie tym miał być, lecz szybko okazało się, że jest to zbyt prymitywne rozwiązanie (choć bez wątpienia cieszące się uznaniem w pewnych kręgach i tego uznania warte).</p>
+<p>
+Mate Survival nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), choć posiada pewne cechy takich serwerów i w miarę możliwości stara się zbliżyć do ich założeń.</p>
+<p>Mate Survival nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie. Jest to sprzeczne z jego założeniami.</p>
+
+
 </div>
-<div class="to-na-dole">
-<a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</a>  
-<a href=https://imgur.com/a/hTNfOV5>screeny</a>  
-<a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a>  
-<a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>etykieta</a>  
-<a href=https://discord.gg/4jDHs2D>discord</a>  
 <!--
 <div style="
 position: absolute;
@@ -101,10 +117,11 @@ width: 10%;
 height: 30%;
 left: 50%;
 right: 50%;
-top: 0%;
+top: 30%;
 z-index: 0.7;
-background: url(https://i.imgur.com/k1pFWAb.png) 100% 10% / cover no-repeat scroll padding-box;">
+">
 -->
+</div>
 </head>
 
 
@@ -112,6 +129,12 @@ background: url(https://i.imgur.com/k1pFWAb.png) 100% 10% / cover no-repeat scro
 
 
 <body>
+<div class="to-na-dole">
+<a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</a>  
+<a href=https://imgur.com/a/hTNfOV5>screeny</a>  
+<a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a>  
+<a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>etykieta</a>  
+<a href=https://discord.gg/4jDHs2D>discord</a></div>
 <!--
 <div class="center">
   <image src=https://i.imgur.com/k1pFWAb.png></image>
