fix dla przegladarki firefox
:c

--- a/sv/index.html
+++ b/sv/index.html
@@ -3,9 +3,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/9G5MhGK.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 <style>
+
 /* unvisited link */
 a:link {
     font-size: 90%;
@@ -34,16 +36,15 @@ a:hover {
     transform: translate(-50%, -50%);
     }
 .to-na-dole {
-    margin: 0;
+    margin: 0px;
     color: white;
     font-style: italic;
-    position: absolute;
+    position: static;
     text-shadow: 0 0 5px #000000;
     font-family: 'Open Sans', serif;
     top: 96.5%;
-    left: 50%;
- -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);   
+ -ms-transform: translate(0%, 3200%);
+    transform: translate(0%, 3200%);   
 }
 </style>
 
@@ -87,13 +88,13 @@ background: linear-gradient(#00000000, #00000099);">
     -webkit-animation:hue 15s linear infinite;
 z-index: 1;">
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>
-<img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;">
-</a>
+<img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;"> </a>
+</div>
 <div style="
     color: white;
     position: fixed;
      top: 27%;
-    text-shadow: 0 2px 15px #000000;
+    text-shadow: 0px 2px 15px #000000;
     font-family: 'Open Sans', serif;
     width: 80%;
     left: 10%;
@@ -121,7 +122,6 @@ top: 30%;
 z-index: 0.7;
 ">
 -->
-</div>
 </head>
 
 
@@ -129,12 +129,12 @@ z-index: 0.7;
 
 
 <body>
-<div class="to-na-dole">
+<div class="to-na-dole"><center>
 <a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</a>  
 <a href=https://imgur.com/a/hTNfOV5>screeny</a>  
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a>  
 <a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>etykieta</a>  
-<a href=https://discord.gg/4jDHs2D>discord</a></div>
+<a href=https://discord.gg/4jDHs2D>discord</center></a></div>
 <!--
 <div class="center">
   <image src=https://i.imgur.com/k1pFWAb.png></image>
