--- a/sv/index.html
+++ b/sv/index.html
@@ -39,12 +39,14 @@ a:hover {
     margin: 0px;
     color: white;
     font-style: italic;
-    position: static;
+    position: fixed;
     text-shadow: 0 0 5px #000000;
     font-family: 'Open Sans', serif;
-    top: 96.5%;
- -ms-transform: translate(0%, 3200%);
-    transform: translate(0%, 3200%);   
+    left: 0%;
+    right: 0%;
+    top: 94%;
+ -ms-transform: translate(0%, 0%);
+    transform: translate(0%, 0%);
 }
 </style>
 
@@ -77,6 +79,7 @@ top: 90%;
 z-index: 0.5;
 background: linear-gradient(#00000000, #00000099);">
 </div>
+<!--
 <div style="
    position: absolute;
    top: 42%;
@@ -90,20 +93,36 @@ z-index: 1;">
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>
 <img src="https://i.imgur.com/x0HtnBx.png" style="width:100%;"> </a>
 </div>
+-->
+
 <div style="
     color: white;
     position: fixed;
-     top: 27%;
+    top: -2%;
     text-shadow: 0px 2px 15px #000000;
     font-family: 'Open Sans', serif;
+    margin: 0px;
     width: 80%;
     left: 10%;
     text-align: center;
   text-justify: inter-word;
 ">
-<h3 style=" text-decoration: none; font-weight: normal;"><center>Czym jest Mate Survival?</center></h3>
+<center>
+   
+<img src="https://i.imgur.com/x0HtnBx.png" style="
+  width: 100%;
+  height: auto;
+   max-width: 500pt;
+  transform: translate(0%, 30%);
+ "> </a>
+</center>
+<h3 style="position: relative; height: -100%; text-decoration: none; font-weight: normal;">
+<center>Czym jest Mate Survival?</center></h3>
 Mate Survival jest nowoczesnym serwerem przenoszącym doświadczenie rodem z klasycznych, małych, prywatnych serwerów do gry z kolegami/ekipą do publicznej formy oferując przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, płatną teleportację, system aukcji, dedykowane warpy dla graczy, lepsze drogi i trampoliny.
-<h3 style=" text-decoration: none; font-weight: normal;"><center>Czym <b>nie</b> jest Mate Survival?</center></h3><p>
+<h3 style="
+text-decoration: none;
+font-weight: normal;">
+<center>Czym <b>nie</b> jest Mate Survival?</center></h3><p>
 Mate Survival nie jest czystym survivalem z krwi i kości. Co ciekawe, na początku właśnie tym miał być, lecz szybko okazało się, że jest to zbyt prymitywne rozwiązanie (choć bez wątpienia cieszące się uznaniem w pewnych kręgach i tego uznania warte).</p>
 <p>
 Mate Survival nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), choć posiada pewne cechy takich serwerów i w miarę możliwości stara się zbliżyć do ich założeń.</p>
@@ -129,17 +148,15 @@ z-index: 0.7;
 
 
 <body>
-<div class="to-na-dole"><center>
+<div class="to-na-dole">
+<center>
 <a href=https://dphz.github.io/sv/jak-zdobyc-vipa/>ranga vip</a>  
 <a href=https://imgur.com/a/hTNfOV5>screeny</a>  
 <a href=https://craftportal.pl/forum/index.php?/topic/103854-112240ssvslimefun-mate-survival-survml-czas-na-%C5%9Bwie%C5%BCy-serwer-survival/>prezentacja</a>  
 <a href=https://docs.google.com/document/d/1bEotHCPLfuwuwL_pGxShD-kZ6HjqKE-WfGhYwdvqQgA/edit?usp=sharing>etykieta</a>  
-<a href=https://discord.gg/4jDHs2D>discord</center></a></div>
-<!--
-<div class="center">
-  <image src=https://i.imgur.com/k1pFWAb.png></image>
+<a href=https://discord.gg/4jDHs2D>discord</a>
+</center>
 </div>
--->
 
 </body>
 </html>
