--- a/sv/index.html
+++ b/sv/index.html
@@ -114,6 +114,8 @@ z-index: 1;">
   height: auto;
    max-width: 500pt;
   transform: translate(0%, 30%);
+  -webkit-animation:hue 15s linear infinite;
+z-index: 1;
  "> </a>
 </center>
 <h3 style="position: relative; height: -100%; text-decoration: none; font-weight: normal;">
