--- a/sv/index.html
+++ b/sv/index.html
@@ -119,16 +119,16 @@ z-index: 1;
  "> </a>
 </center>
 <h3 style="position: relative; height: -100%; text-decoration: none; font-weight: normal;">
-<center>Czym jest Mate Survival?</center></h3>
-Mate Survival jest nowoczesnym serwerem przenoszącym doświadczenie rodem z klasycznych, małych, prywatnych serwerów do gry z kolegami/ekipą do publicznej formy oferując przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, płatną teleportację, system aukcji, dedykowane warpy dla graczy, lepsze drogi i trampoliny.
+<center>Czym jest Mate Cuboids?</center></h3>
+Mate Cuboids to nowoczesny serwer przenoszący doświadczenie rodem z klasycznych serwerów do gry ze znajomymi/ekipą do publicznej formy oferujący przy okazji wiele usprawnień i ciekawych, nierzadko autorskich rozwiązań, m. in. walutę mającą pokrycie w złocie, zaawansowany system nawigacji, system aukcji, dedykowane warpy dla graczy, lepsze drogi, trampoliny, niestandardowy generator świata, plugin Slimefun... i inne :)
 <h3 style="
 text-decoration: none;
 font-weight: normal;">
-<center>Czym <b>nie</b> jest Mate Survival?</center></h3><p>
-Mate Survival nie jest czystym survivalem z krwi i kości. Co ciekawe, na początku właśnie tym miał być, lecz szybko okazało się, że jest to zbyt prymitywne rozwiązanie (choć bez wątpienia cieszące się uznaniem w pewnych kręgach i tego uznania warte).</p>
+<center>Czym <b>nie</b> jest Mate Cuboids?</center></h3><p>
+Mate Cuboids nie jest czystym serwerem Vanilla z krwi i kości. Na początku właśnie tym miał być, lecz szybko zrezygnowano z tego ze względu na pewne poważne problemy, m. in. cheaterzy, brak ochrony własności, brak usprawnień w handlu itd.</p>
 <p>
-Mate Survival nie jest serwerem wolnościowym (takim jak np. fcraft czy ancap), choć posiada pewne cechy takich serwerów i w miarę możliwości stara się zbliżyć do ich założeń.</p>
-<p>Mate Survival nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie. Jest to sprzeczne z jego założeniami.</p>
+Mate Cuboids nie jest do końca serwerem wolnościowym (takim jak np. fcraft czy ancap), ale stara się zbliżyć do ich założeń najbardziej, jak się da.</p>
+<p>Mate Cuboids nie jest serwerem EasyHC czy z gildiami i nigdy takim nie będzie - jest to sprzeczne z jego założeniami.</p>
 
 
 </div>
